# cetsp

./: .gitignore  CMakeLists.txt  main.cpp  misc.txt  old.cpp  readme.md  requirements.txt  settings.txt  slow.cpp  test.cpp  tsp.hpp
data/: benchmark_visualize.py  compare.py  comparison.csv  processCMU.py  readme.md  reconstructOverlap.py  visualize.py
data/benchmark/: readme.md
data/cmu/: bonus1000.cetsp  bonus1000rdmRad.cetsp  bubbles1.cetsp  bubbles2.cetsp  bubbles3.cetsp  bubbles4.cetsp  bubbles5.cetsp  bubbles6.cetsp  bubbles7.cetsp  bubbles8.cetsp  bubbles9.cetsp  chaoSingleDep.cetsp  concentricCircles1.cetsp  concentricCircles2.cetsp  concentricCircles3.cetsp  concentricCircles4.cetsp  concentricCircles5.cetsp  d493.cetsp  d493rdmRad.cetsp  dsj1000.cetsp  dsj1000rdmRad.cetsp  kroD100.cetsp  kroD100rdmRad.cetsp  lin318.cetsp  lin318rdmRad.cetsp  nlpProb0.cetsp  nlpProb0rdmRad.cetsp  nlpProb1.cetsp  nlpProb10.cetsp  nlpProb10rdmRad.cetsp  nlpProb11.cetsp  nlpProb11rdmRad.cetsp  nlpProb12.cetsp  nlpProb12_1.cetsp  nlpProb12_1rdmRad.cetsp  nlpProb12rdmRad.cetsp  nlpProb13.cetsp  nlpProb13rdmRad.cetsp  nlpProb1rdmRad.cetsp  nlpProb2.cetsp  (+38 more)
data/cmu_output/: bonus1000.txt  bonus1000rdmRad.txt  bubbles1.txt  bubbles2.txt  bubbles3.txt  bubbles4.txt  bubbles5.txt  bubbles6.txt  bubbles7.txt  bubbles8.txt  bubbles9.txt  chaoSingleDep.txt  concentricCircles1.txt  concentricCircles2.txt  concentricCircles3.txt  concentricCircles4.txt  concentricCircles5.txt  d493.txt  d493_or10.txt  d493_or2.txt  d493_or30.txt  d493rdmRad.txt  dsj1000.txt  dsj1000_or10.txt  dsj1000_or2.txt  dsj1000_or30.txt  dsj1000rdmRad.txt  kroD100.txt  kroD100_or10.txt  kroD100_or2.txt  kroD100_or30.txt  kroD100rdmRad.txt  lin318.txt  lin318_or10.txt  lin318_or2.txt  lin318_or30.txt  lin318rdmRad.txt  nlpProb0.txt  nlpProb0rdmRad.txt  nlpProb1.txt  (+60 more)
data/cmu_processed/: bonus1000.txt  bonus1000rdmRad.txt  bubbles1.txt  bubbles2.txt  bubbles3.txt  bubbles4.txt  bubbles5.txt  bubbles6.txt  bubbles7.txt  bubbles8.txt  bubbles9.txt  chaoSingleDep.txt  concentricCircles1.txt  concentricCircles2.txt  concentricCircles3.txt  concentricCircles4.txt  concentricCircles5.txt  d493_or10.txt  d493_or2.txt  d493_or30.txt  d493rdmRad.txt  dsj1000_or10.txt  dsj1000_or2.txt  dsj1000_or30.txt  dsj1000rdmRad.txt  kroD100_or10.txt  kroD100_or2.txt  kroD100_or30.txt  kroD100rdmRad.txt  lin318_or10.txt  lin318_or2.txt  lin318_or30.txt  lin318rdmRad.txt  nlpProb0.txt  nlpProb0rdmRad.txt  nlpProb1.txt  nlpProb10rdmRad.txt  nlpProb11.txt  nlpProb11rdmRad.txt  nlpProb12.txt  (+54 more)
data/timing/: generate_structured_timing_tests.py  generate_timing_tests.py  timing_log.txt  timing_structured_log.txt
data/timing/timing_input/: test_n1024.txt  test_n128.txt  test_n16384.txt  test_n2048.txt  test_n256.txt  test_n32768.txt  test_n4096.txt  test_n512.txt  test_n65536.txt  test_n8192.txt
data/timing/timing_output/: test_n1024.txt  test_n1048576.txt  test_n128.txt  test_n131072.txt  test_n16384.txt  test_n2048.txt  test_n256.txt  test_n262144.txt  test_n32768.txt  test_n4096.txt  test_n512.txt  test_n524288.txt  test_n65536.txt  test_n8192.txt
data/timing/timing_structured_input/: test_n1024.txt  test_n128.txt  test_n131072.txt  test_n16384.txt  test_n2048.txt  test_n256.txt  test_n32768.txt  test_n4096.txt  test_n512.txt  test_n65536.txt  test_n8192.txt
data/timing/timing_structured_output/: test_n1024.txt  test_n128.txt  test_n131072.txt  test_n16384.txt  (+7 more)
paper/: readme.md
src/: CETSP.cpp  CETSP.hpp  LKH.hpp  debug.hpp  geometry.cpp  geometry.hpp  main.cpp  merge.cpp  merge.hpp  readme.md  structures.hpp  unmerge.cpp  unmerge.hpp
src/opt/: SOCP.hpp  readme.md
test/: LKHTest.cpp  SOCPTest.cpp  gradTest.py  optTSPTest.py
